# streamlit-advanced-dataframe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-frontend.yml  deploy-docs.yml  publish-pypi.yml  publish.yml
docs/: api.md  demo.md  index.html  index.md
docs/features/: basic.md  column-config.md  expandable.md  filtering.md  header-groups.md  selection.md  virtual-scroll.md
docs/getting-started/: installation.md  quickstart.md
examples/: main.py
rulesets/: main-branch-protection-with-conventional-commits.json
src/: main.py
src/components/__template/my_component/frontend/: .prettierrc.yaml
src/components/advanced_dataframe/: __init__.py  setup.py
src/components/advanced_dataframe/my_component/: __init__.py
src/components/advanced_dataframe/my_component/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
streamlit_advanced_dataframe/: __init__.py
streamlit_advanced_dataframe/frontend/: eslint.config.js  package-lock.json
streamlit_advanced_dataframe/frontend/src/: MyComponent.tsx
streamlit_advanced_dataframe/frontend/src/components/: AdvancedDataFrame.tsx  ColumnFilter.tsx  ErrorBoundary.tsx  TableToolbar.tsx
streamlit_advanced_dataframe/frontend/src/components/filters/: TextFilter.tsx  (+1 more)
streamlit_advanced_dataframe/frontend/src/hooks/: useColumnType.ts  useStreamlitTheme.ts
streamlit_advanced_dataframe/frontend/src/types/: table.ts
(+9 files in other folders)
