[project]
name = "streamlit-advanced-dataframe"
version = "0.1.0"
description = "Streamlitの標準st.dataframeを拡張した高機能カスタムコンポーネント"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["streamlit", "dataframe", "table", "component", "tanstack-table"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0.0",
    "streamlit>=1.52.0",
]

[project.urls]
Homepage = "https://github.com/j4rviscmd/streamlit-advanced-dataframe"
Repository = "https://github.com/j4rviscmd/streamlit-advanced-dataframe"
Issues = "https://github.com/j4rviscmd/streamlit-advanced-dataframe/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["streamlit_advanced_dataframe"]
include-package-data = true

[tool.setuptools.package-data]
streamlit_advanced_dataframe = ["frontend/dist/**/*"]
